Initial working implementation of converter